--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
   position: relative;
   display: inline-block;
   width: 10%;
+  padding-right: 10px;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -61,7 +62,7 @@ button {
   background: rgb(19, 111, 197);
   background: linear-gradient(0deg, rgb(19, 111, 197) 0%, rgb(19, 111, 197) 100%);
   line-height: 42px;
-  padding: 0;
+  padding: 5px;
   border: none;
     
 }
